work section + cards

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <img class="logo" src="assets/img/mdjlogo.png" alt="" />
           <nav>
             <ul>
-              <li><a href="">Work</a></li>
+              <li><a href="#work">Work</a></li>
               <li><a href="">Skills</a></li>
               <li><a href="">About</a></li>
               <li><a href="">Contact</a></li>
@@ -88,9 +88,69 @@
     <main>
       <section id="work">
         <div class="container">
-          <div class="row">
+          <div class="row my-5">
             <h1 class="section-heading">my work</h1>
           </div>
+          <div class="row my-5 g-5">
+            <div class="col-md-6">
+              <div class="p-card">
+                <img src="assets/img/projects/project_1.png" class="card-img-top" alt="..." />
+                <div class="p-card-heading"><h3>Neopetrol Inzenjering</h3></div>
+                <div class="p-card-links">
+                  <a id="" class="more mod-btn" data-modLink="project-1"
+                    ><i class="fa-solid fa-circle-info"></i
+                  ></a>
+                  <a href="https://www.npi.rs" target="_blank" class="go"
+                    ><i class="fa-solid fa-link"></i
+                  ></a>
+                </div>
+                <div class="p-card-text">
+                  <p>
+                    Company presentation, writtent from scratch. Implemented live search
+                    option for list of projects, company profile pdf on 4 languages available
+                    for viewing or download
+                  </p>
+                  <div class="p-card-text-used">
+                    <i class="fa-brands fa-html5"></i>
+                    <i class="fa-brands fa-css3"></i>
+                    <i class="fa-brands fa-js-square"></i>
+                    <i class="fa-brands fa-bootstrap"></i>
+                  </div>
+                </div>
+              </div>
+              <!--card end-->
+              
+            </div>
+            <div class="col-md-6">
+              <div class="p-card">
+                <img src="assets/img/projects/project_1.png" class="card-img-top" alt="..." />
+                <div class="p-card-heading"><h3>Neopetrol Inzenjering</h3></div>
+                <div class="p-card-links">
+                  <a id="" class="more mod-btn" data-modLink="project-1"
+                    ><i class="fa-solid fa-circle-info"></i
+                  ></a>
+                  <a href="https://www.npi.rs" target="_blank" class="go"
+                    ><i class="fa-solid fa-link"></i
+                  ></a>
+                </div>
+                <div class="p-card-text">
+                  <p>
+                    Company presentation, writtent from scratch. Implemented live search
+                    option for list of projects, company profile pdf on 4 languages available
+                    for viewing or download
+                  </p>
+                  <div class="p-card-text-used">
+                    <i class="fa-brands fa-html5"></i>
+                    <i class="fa-brands fa-css3"></i>
+                    <i class="fa-brands fa-js-square"></i>
+                    <i class="fa-brands fa-bootstrap"></i>
+                  </div>
+                </div>
+              </div>
+              <!--card end-->
+            </div>
+          </div>
+
         </div>
       </section>
     </main>
