--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
           <nav>
             <ul>
               <li><a href="#work">Work</a></li>
-              <li><a href="">Skills</a></li>
-              <li><a href="">About</a></li>
-              <li><a href="">Contact</a></li>
+              <li><a href="#skills">Skills</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
           </nav>
         </div>
@@ -123,8 +123,8 @@
             </div>
             <div class="col-md-6">
               <div class="p-card">
-                <img src="assets/img/projects/project_1.png" class="card-img-top" alt="..." />
-                <div class="p-card-heading"><h3>Neopetrol Inzenjering</h3></div>
+                <img src="assets/img/projects/project_2.png" class="card-img-top" alt="..." />
+                <div class="p-card-heading"><h3>My Portfolio</h3></div>
                 <div class="p-card-links">
                   <a id="" class="more mod-btn" data-modLink="project-1"
                     ><i class="fa-solid fa-circle-info"></i
@@ -135,9 +135,7 @@
                 </div>
                 <div class="p-card-text">
                   <p>
-                    Company presentation, writtent from scratch. Implemented live search
-                    option for list of projects, company profile pdf on 4 languages available
-                    for viewing or download
+                    My first portfolio. Done from the free template, heavily modified, but still credited. Made with lots of love.
                   </p>
                   <div class="p-card-text-used">
                     <i class="fa-brands fa-html5"></i>
@@ -149,10 +147,144 @@
               </div>
               <!--card end-->
             </div>
-          </div>
 
+          </div><!-- row end-->
+          <div class="row my-5 g-5">
+            <div class="col-md-6">
+              <div class="p-card">
+                <img src="assets/img/projects/project_3.png" class="card-img-top" alt="..." />
+                <div class="p-card-heading"><h3>Food ordering app</h3></div>
+                <div class="p-card-links">
+                  <a id="" class="more mod-btn" data-modLink="project-1"
+                    ><i class="fa-solid fa-circle-info"></i
+                  ></a>
+                  <a href="https://www.npi.rs" target="_blank" class="go"
+                    ><i class="fa-solid fa-link"></i
+                  ></a>
+                </div>
+                <div class="p-card-text">
+                  <p>
+                    Simple food ordering app, with all the math and check-out functionality. Done as a practical project, part of the React course i'm attending.
+                  </p>
+                  <div class="p-card-text-used">
+                    <i class="fa-brands fa-html5"></i>
+                    <i class="fa-brands fa-css3"></i>
+                    <i class="fa-brands fa-js-square"></i>
+                    <i class="fa-brands fa-bootstrap"></i>
+                  </div>
+                </div>
+              </div>
+              <!--card end-->
+              
+            </div>
+            <div class="col-md-6">
+              <div class="p-card">
+                <img src="assets/img/projects/project_4.png" class="card-img-top" alt="..." />
+                <div class="p-card-heading"><h3>Bankist App</h3></div>
+                <div class="p-card-links">
+                  <a id="" class="more mod-btn" data-modLink="project-1"
+                    ><i class="fa-solid fa-circle-info"></i
+                  ></a>
+                  <a href="https://www.npi.rs" target="_blank" class="go"
+                    ><i class="fa-solid fa-link"></i
+                  ></a>
+                </div>
+                <div class="p-card-text">
+                  <p>
+                    Simple Javascript app that simulates banking transfers between users and loan from bank. Made as a part of Javascript course I'm attending.
+                  </p>
+                  <div class="p-card-text-used">
+                    <i class="fa-brands fa-html5"></i>
+                    <i class="fa-brands fa-css3"></i>
+                    <i class="fa-brands fa-js-square"></i>
+                    <i class="fa-brands fa-bootstrap"></i>
+                  </div>
+                </div>
+              </div>
+              <!--card end-->
+            </div>
+            </div>
         </div>
       </section>
+      <section id="skills">
+        <div class="container">
+          <div class="row my-5">
+            <h1 class="section-heading">skills</h1>
+          </div>
+          <div class="row">
+            <div class="col-lg-12 col-md-12 skill-badges">
+              <i class="fa-brands fa-html5 skill-badge"></i>
+              <i class="fa-brands fa-css3 skill-badge"></i>
+              <i class="fa-brands fa-js-square skill-badge"></i>
+              <i class="fa-brands fa-react skill-badge"></i>
+              <i class="fa-brands fa-bootstrap skill-badge"></i>
+              <i class="fa-brands fa-sass skill-badge"></i>
+              <i class="fa-brands fa-figma skill-badge"></i>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 offset-md-3">
+              <h4 class="cursive">"Skills" is such a harsh word for creative people</h4>
+              <p>So let's talk about things I'm good at instead.<br>
+                For example, i'm very good at <strong><a href="https://www.linkedin.com/pulse/googling-one-most-underestimated-skills-world-shubham-chakraborty/" class="inlineLink" target="_blank">googling</a></strong>. Hell, I learned to code in few languages just by searching examples and tutorials online. Majority of problems we encounter while programming - solutions can be found (through google) on various sites and online comunities. Asking the right question is a key. And it's a skill.</p>
+                <p>Second "skill" would definetly be <strong>creativity</strong>. <br> Just can't imagine a developer that is not creative, even just a little. <br>Well, <strong><a href="" class="inlineLink">others say</a></strong> (and I believe them) that I'm above average creative, and that jobs that doesn't involve creativity and freedom would bore me to death easily.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="about">
+        <div class="container">
+          <div class="row my-5">
+            <h1 class="section-heading">about</h1>
+          </div>
+          <div class="row g-5">
+            <div class="col-md-6">
+              <img src="assets/img/mdj3.png" alt="" class="about">
+            </div>
+            <div class="col-md-6">
+              <h1>Hi again!</h1>
+              <p>I'm Milan and i like to create interesting things for web. While i don't lack creativity, I may lack a bit of professional expirience. Going to change that soon.</p>
+              <p>I've started playing with HTML and CSS in early 2000's, but life took me on a totaly different path. Altough, love for design and web development never faded.</p>
+              <div class="butonz mt-5">
+                <a href="" class="mdj-btn">read more</a>
+                <a href="" class="mdj-btn">blog</a>
+                <a href="" class="mdj-btn">buy me a coffee</a>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer id="footer">
+        <div class="container">
+          <div class="row g-3">
+            <div class="col-md-6">
+              <div class="row">
+                <div class="col-md-6 first-footer-left">
+                  <img src="assets/img/mdjlogo.png" class="img img-fluid" alt="">
+                </div>
+                <div class="col-md6 first-footer-right">
+                  <ul>
+                    <li><a href="#home">home</a></li>
+                    <li><a href="#work">work</a></li>
+                    <li><a href="#skills">skills</a></li>
+                    <li><a href="#about">about</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="row">
+                <div class="col-6 second-footer-left"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, corrupti. Fugiat sunt corrupti hic amet! Deserunt, et harum nobis vero quam voluptas non impedit quaerat!</p></div>
+                <div class="col-6 second-footer-right">
+                  <h3>say hi!</h3>
+                  <h5>send me a message</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
