--- a/index.html
+++ b/index.html
@@ -257,31 +257,11 @@
       </section>
       <footer id="footer">
         <div class="container">
-          <div class="row g-3">
-            <div class="col-md-6">
-              <div class="row">
-                <div class="col-md-6 first-footer-left">
-                  <img src="assets/img/mdjlogo.png" class="img img-fluid" alt="">
-                </div>
-                <div class="col-md6 first-footer-right">
-                  <ul>
-                    <li><a href="#home">home</a></li>
-                    <li><a href="#work">work</a></li>
-                    <li><a href="#skills">skills</a></li>
-                    <li><a href="#about">about</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="row">
-                <div class="col-6 second-footer-left"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, corrupti. Fugiat sunt corrupti hic amet! Deserunt, et harum nobis vero quam voluptas non impedit quaerat!</p></div>
-                <div class="col-6 second-footer-right">
-                  <h3>say hi!</h3>
-                  <h5>send me a message</h5>
-                </div>
-              </div>
-            </div>
+          <div class="col-md-12">
+            <p class="text-center footer-text">Designed by Milan Đumić</p>
+          </div>
+          <div class="col-md-12">
+            <p class="text-center footer-text-small">Thanks to: <a href="">Brittany Chiang</a> for inspiration and ideas, <a href="https://twitter.com/jonasschmedtman">Jonas Schmedtmann</a> for learning me Javascript</p>
           </div>
         </div>
       </footer>
