--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
           <img src="assets/img/mdjlogo.png" alt="">
         </div>
         <ul class="nav">
-          <li class="nav_item"><a href="#work" class="nav_link">work</a></li>
-          <li class="nav_item"><a href="#skills" class="nav_link">skills</a></li>
-          <li class="nav_item"><a href="#about" class="nav_link">about</a></li>
+          <li class="nav_item"><a href="#work" class="nav_link work">work</a></li>
+          <li class="nav_item"><a href="#skills" class="nav_link skills">skills</a></li>
+          <li class="nav_item"><a href="#about" class="nav_link about">about</a></li>
           <li class="nav_item"><a href="#contact" class="nav_link">contact</a></li>
         </ul>
       </div>
