--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </header>
 
     <main>
-      <section id="work">
+      <section id="work" class="me-5">
         <div class="container">
           <div class="row my-5">
             <h1 class="section-heading">my work</h1>
