reusable modal done

--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body>
+
+    <!-- MODAL Start -->
+
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <div class="modal-header justify-content-end">
+      <span class="close">&times;</span>
+      
+    </div>
+    <div class="modal-body">
+      <div id="ext-content">        
+      </div>
+    </div>
+  </div>
+
+</div>
+<!-- MODAL End -->
+
     <!-- SIDEBAR -->
     <div id="sidebar-left">
       <div class="content">
@@ -109,7 +129,7 @@
                 />
                 <div class="p-card-heading"><h3>Neopetrol Inzenjering</h3></div>
                 <div class="p-card-links">
-                  <a id="" class="more mod-btn" data-modLink="project-1"
+                  <a id="" class="more mod-btn" data-modLink="mods/project-1"
                     ><i class="fa-solid fa-circle-info"></i
                   ></a>
                   <a href="https://www.npi.rs" target="_blank" class="go"
@@ -141,10 +161,10 @@
                 />
                 <div class="p-card-heading"><h3>My Portfolio</h3></div>
                 <div class="p-card-links">
-                  <a id="" class="more mod-btn" data-modLink="project-1"
+                  <a id="" class="more mod-btn" data-modLink="mods/project-2"
                     ><i class="fa-solid fa-circle-info"></i
                   ></a>
-                  <a href="https://www.npi.rs" target="_blank" class="go"
+                  <a href="https://https://dambus.github.io/myPortfolio/" target="_blank" class="go"
                     ><i class="fa-solid fa-link"></i
                   ></a>
                 </div>
@@ -175,7 +195,7 @@
                 />
                 <div class="p-card-heading"><h3>Food ordering app</h3></div>
                 <div class="p-card-links">
-                  <a id="" class="more mod-btn" data-modLink="project-1"
+                  <a id="" class="more mod-btn" data-modLink="mods/project-3"
                     ><i class="fa-solid fa-circle-info"></i
                   ></a>
                   <a href="https://www.npi.rs" target="_blank" class="go"
@@ -207,7 +227,7 @@
                 />
                 <div class="p-card-heading"><h3>Bankist App</h3></div>
                 <div class="p-card-links">
-                  <a id="" class="more mod-btn" data-modLink="project-1"
+                  <a id="" class="more mod-btn" data-modLink="mods/project-4"
                     ><i class="fa-solid fa-circle-info"></i
                   ></a>
                   <a href="https://www.npi.rs" target="_blank" class="go"
@@ -337,5 +357,6 @@
     </main>
 
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/modals.js"></script>
   </body>
 </html>
