--- a/mods/project-2.html
+++ b/mods/project-2.html
@@ -34,15 +34,12 @@
     <div class="col-lg-6">
       <h5 class="mb-2"><strong>about</strong></h5>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sint
-        aperiam facere modi cupiditate sit culpa tempore, optio exercitationem
-        adipisci laudantium ea nam obcaecati expedita quas, repellat consequatur
-        non. Placeat voluptate similique vero unde! Quibusdam aut repellat et
-        assumenda explicabo provident nemo minus officiis laudantium
-        consequuntur nesciunt, eos accusamus facilis, suscipit iusto! Assumenda
-        adipisci natus quidem maiores atque harum? Perferendis incidunt
-        molestiae est, consequatur dolor distinctio at explicabo similique
-        accusamus excepturi. Iusto possimus nihil
+        My first portfolio. Made from free template from
+        <a href="">bootstrapready.com</a>, but heavily modified. Nice and slick,
+        responsive and mobile-friendly. Using a number of libraries for
+        animation and functionality. Downloadable CV, but no projects section.
+        At that time, there was almost nothing to share and present. Now the
+        times are different.
       </p>
       <h5 class="mb-2"><strong>year</strong></h5>
       <p>2021.</p>
@@ -58,9 +55,7 @@
 
       <ul>
         <li>responsive</li>
-        <li>
-          javascript powered live search for projects in references section
-        </li>
+        <li>social network profile page look-a-like</li>
         <li>also designed CV which is downloadable</li>
       </ul>
     </div>
