minor responsivness changes

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               </h1>
             </div>
             <div class="col-lg-6">
-              <img src="assets/img/illustrations/Design tools-bro.svg" alt="" />
+              <img src="assets/img/illustrations/Software integration-bro.svg" alt="" />
             </div>
           </div>
         </div>
@@ -328,7 +328,7 @@
               <div class="butonz mt-5">
                 <a href="" class="mdj-btn">read more</a>
                 <a href="" class="mdj-btn">blog</a>
-                <a href="" class="mdj-btn">buy me a coffee</a>
+                
               </div>
             </div>
           </div>
