--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
             <div class="col-lg-12 col-md-12 skill-badges">
               <i class="fa-brands fa-html5 skill-badge"></i>
               <i class="fa-brands fa-css3 skill-badge"></i>
-              <i class="fa-brands fa-js-square skill-badge"></i>
-              <i class="fa-brands fa-react skill-badge"></i>
+              <i class="fa-brands fa-js-square skill-badge"><div class="still-learning">learning</div></i>
+              <i class="fa-brands fa-react skill-badge"><div class="still-learning">learning</div></i>
               <i class="fa-brands fa-bootstrap skill-badge"></i>
               <i class="fa-brands fa-sass skill-badge"></i>
               <i class="fa-brands fa-figma skill-badge"></i>
