--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                   <a id="" class="more mod-btn" data-modLink="mods/project-3"
                     ><i class="fa-solid fa-circle-info"></i
                   ></a>
-                  <a href="https://www.npi.rs" target="_blank" class="go"
+                  <a href="https://joyful-fudge-0313da.netlify.app/" target="_blank" class="go"
                     ><i class="fa-solid fa-link"></i
                   ></a>
                 </div>
@@ -230,7 +230,7 @@
                   <a id="" class="more mod-btn" data-modLink="mods/project-4"
                     ><i class="fa-solid fa-circle-info"></i
                   ></a>
-                  <a href="https://www.npi.rs" target="_blank" class="go"
+                  <a href="https://dambus.github.io/bankist-app/" target="_blank" class="go"
                     ><i class="fa-solid fa-link"></i
                   ></a>
                 </div>
