--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <!-- NAVIGATION -->
       <div id="navigation" class="">
         <div class="logo">
-          <img src="assets/img/mdjlogo.png" alt="">
+          <a href="index.html" class="logo-link"><img src="assets/img/mdjlogo.png" alt=""></a>
         </div>
         <ul class="nav">
           <li class="nav_item"><a href="#work" class="nav_link work">work</a></li>
@@ -262,7 +262,7 @@
             <div class="col-lg-12 col-md-12 skill-badges">
               <i class="fa-brands fa-html5 skill-badge"></i>
               <i class="fa-brands fa-css3 skill-badge"></i>
-              <i class="fa-brands fa-js-square skill-badge"><div class="still-learning">learning</div></i>
+              <i class="fa-brands fa-js-square skill-badge"><div class="still-learning"> learning </div></i>
               <i class="fa-brands fa-react skill-badge"><div class="still-learning">learning</div></i>
               <i class="fa-brands fa-bootstrap skill-badge"></i>
               <i class="fa-brands fa-sass skill-badge"></i>
