--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                   <a id="" class="more mod-btn" data-modLink="mods/project-2"
                     ><i class="fa-solid fa-circle-info"></i
                   ></a>
-                  <a href="https://https://dambus.github.io/myPortfolio/" target="_blank" class="go"
+                  <a href="https://dambus.github.io/myPortfolio/" target="_blank" class="go"
                     ><i class="fa-solid fa-link"></i
                   ></a>
                 </div>
@@ -333,7 +333,7 @@
                 web development never faded.
               </p>
               <div class="butonz mt-5">
-                <a href="" class="mdj-btn">read more</a>
+                <a href="about.html" class="mdj-btn">read more</a>
                 <a href="" class="mdj-btn">blog</a>
                 
               </div>
