responsive changes, about page

--- a/index.html
+++ b/index.html
@@ -278,35 +278,37 @@
           </div>
           <div class="row">
             <div class="col-md-6 offset-md-3">
-              <h4 class="cursive">
+              <h4 class="cursive cta-htext">
                 "Skills" is such a harsh word for creative people
               </h4>
-              <p>
-                So let's talk about things I'm good at instead.<br />
-                For example, i'm very good at
-                <strong
-                  ><a
-                    href="https://www.linkedin.com/pulse/googling-one-most-underestimated-skills-world-shubham-chakraborty/"
-                    class="inlineLink"
-                    target="_blank"
-                    >googling</a
-                  ></strong
-                >. Hell, I learned to code in few languages just by searching
-                examples and tutorials online. Majority of problems we encounter
-                while programming - solutions can be found (through google) on
-                various sites and online comunities. Asking the right question
-                is a key. And it's a skill.
-              </p>
-              <p>
-                Second "skill" would definetly be <strong>creativity</strong>.
-                <br />
-                Just can't imagine a developer that is not creative, even just a
-                little. <br />Well,
-                <strong><a href="" class="inlineLink">others say</a></strong>
-                (and I believe them) that I'm above average creative, and that
-                jobs that doesn't involve creativity and freedom would bore me
-                to death easily.
-              </p>
+              <div class="magazine">
+                <p>
+                  So let's talk about things I'm good at instead.<br />
+                  For example, i'm very good at
+                  <strong
+                    ><a
+                      href="https://www.linkedin.com/pulse/googling-one-most-underestimated-skills-world-shubham-chakraborty/"
+                      class="inlineLink"
+                      target="_blank"
+                      >googling</a
+                    ></strong
+                  >. Hell, I learned to code in few languages just by searching
+                  examples and tutorials online. Majority of problems we encounter
+                  while programming - solutions can be found (through google) on
+                  various sites and online comunities. Asking the right question
+                  is a key. And it's a skill.
+                </p>
+                <p>
+                  Second "skill" would definetly be <strong>creativity</strong>.
+                  <br />
+                  Just can't imagine a developer that is not creative, even just a
+                  little. <br />Well,
+                  <strong><a href="" class="inlineLink">others say</a></strong>
+                  (and I believe them) that I'm above average creative, and that
+                  jobs that doesn't involve creativity and freedom would bore me
+                  to death easily.
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -322,16 +324,18 @@
             </div>
             <div class="col-md-6">
               <h1>Hi again!</h1>
-              <p>
-                I'm Milan and i like to create interesting things for web. While
-                i don't lack creativity, I may lack a bit of professional
-                expirience. Going to change that soon.
-              </p>
-              <p>
-                I've started playing with HTML and CSS in early 2000's, but life
-                took me on a totaly different path. Altough, love for design and
-                web development never faded.
-              </p>
+              <div class="magazine">
+                <p>
+                  I'm Milan and i like to create interesting things for web. While
+                  i don't lack creativity, I may lack a bit of professional
+                  expirience. Going to change that soon.
+                </p>
+                <p>
+                  I've started playing with HTML and CSS in early 2000's, but life
+                  took me on a totaly different path. Altough, love for design and
+                  web development never faded.
+                </p>
+              </div>
               <div class="butonz mt-5">
                 <a href="about.html" class="mdj-btn">read more</a>
                 <a href="" class="mdj-btn">blog</a>
